refactor(node,trade): node-server api 规范化(阶段1) + 计量拆分 + XrayClientApi 改名
- trade: 流量计量从 TradeLifecycleJob 拆出 TradeTrafficMeteringService(接口+Impl); job 只留调度 + 生命周期动作(吊销/停服/复活)
- node-api: XrayClientNodeApi → XrayClientApi(对齐 xray_client 表); 5 个调用方引用同步
- 注入字段名统一全类型驼峰(xrayClientProvisionApi/tradeSubscriptionMapper/xrayClientMapper 等)
- node-server 全部 api 实现规范化: @RequiredArgsConstructor→@Resource 字段注入、手写 stream→CollectionUtils、手写判空→CollUtil/ObjectUtil
- docs: backend-coding-standards 补 §7(字段名=类型名全驼峰) + §1(Api 命名对齐表名)

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>