@@ -1,5 +1,7 @@
 package com.nook.biz.node.api.xray;
 
+import cn.hutool.core.collection.CollUtil;
+import cn.hutool.core.util.ObjectUtil;
 import cn.hutool.core.util.StrUtil;
 import com.nook.biz.node.api.enums.XrayClientStatusEnum;
 import com.nook.biz.node.api.xray.dto.XrayClientNodeDTO;
@@ -9,60 +11,59 @@ import com.nook.biz.node.dal.dataobject.resource.ResourceServerDO;
 import com.nook.biz.node.dal.mysql.mapper.ResourceServerMapper;
 import com.nook.biz.node.dal.mysql.mapper.XrayClientMapper;
 import com.nook.biz.node.dal.mysql.mapper.XrayConfigMapper;
-import lombok.RequiredArgsConstructor;
+import com.nook.common.utils.collection.CollectionUtils;
+import jakarta.annotation.Resource;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Set;
-import java.util.function.Function;
 import java.util.stream.Collectors;
 
 /**
- * {@link XrayClientNodeApi} 实现; 组合 xray_client + xray_config + resource_server 拼连接信息.
+ * {@link XrayClientApi} 实现; 组合 xray_client + xray_config + resource_server 拼连接信息.
  *
  * @author nook
  */
 @Service
-@RequiredArgsConstructor
-public class XrayClientNodeApiImpl implements XrayClientNodeApi {
+public class XrayClientApiImpl implements XrayClientApi {
 
-    private final XrayClientMapper clientMapper;
-    private final XrayConfigMapper configMapper;
-    private final ResourceServerMapper serverMapper;
+    @Resource
+    private XrayClientMapper xrayClientMapper;
+    @Resource
+    private XrayConfigMapper xrayConfigMapper;
+    @Resource
+    private ResourceServerMapper resourceServerMapper;
 
     @Override
     public List<XrayClientNodeDTO> getNodeInfos(Collection<String> clientIds) {
-        if (clientIds == null || clientIds.isEmpty()) {
-            return Collections.emptyList();
+        if (CollUtil.isEmpty(clientIds)) {
+            return List.of();
         }
-        List<XrayClientDO> clients = clientMapper.selectBatchIds(clientIds).stream()
+        List<XrayClientDO> clients = xrayClientMapper.selectBatchIds(clientIds).stream()
                 .filter(c -> XrayClientStatusEnum.RUNNING.matches(c.getStatus()))
                 .collect(Collectors.toList());
-        if (clients.isEmpty()) {
-            return Collections.emptyList();
+        if (CollUtil.isEmpty(clients)) {
+            return List.of();
         }
-        Set<String> serverIds = clients.stream()
-                .map(XrayClientDO::getServerId).collect(Collectors.toSet());
-        Map<String, XrayConfigDO> cfgMap = configMapper.selectBatchIds(serverIds).stream()
-                .collect(Collectors.toMap(XrayConfigDO::getServerId, Function.identity()));
-        Map<String, ResourceServerDO> serverMap = serverMapper.selectBatchIds(serverIds).stream()
-                .collect(Collectors.toMap(ResourceServerDO::getId, Function.identity()));
+        Set<String> serverIds = CollectionUtils.convertSet(clients, XrayClientDO::getServerId);
+        Map<String, XrayConfigDO> cfgMap = CollectionUtils.convertMap(
+                xrayConfigMapper.selectBatchIds(serverIds), XrayConfigDO::getServerId);
+        Map<String, ResourceServerDO> serverMap = CollectionUtils.convertMap(
+                resourceServerMapper.selectBatchIds(serverIds), ResourceServerDO::getId);
 
         List<XrayClientNodeDTO> out = new ArrayList<>(clients.size());
         for (XrayClientDO c : clients) {
             XrayConfigDO cfg = cfgMap.get(c.getServerId());
-            if (cfg == null) {
+            if (ObjectUtil.isNull(cfg)) {
                 continue;
             }
             ResourceServerDO srv = serverMap.get(c.getServerId());
             String host = StrUtil.isNotBlank(cfg.getDomain())
                     ? cfg.getDomain()
-                    : (srv != null ? srv.getIpAddress() : null);
+                    : (ObjectUtil.isNull(srv) ? null : srv.getIpAddress());
             if (StrUtil.isBlank(host)) {
                 continue;
             }
@@ -82,22 +83,21 @@ public class XrayClientNodeApiImpl implements XrayClientNodeApi {
 
     @Override
     public Map<String, String> getServerIdByClientIds(Collection<String> clientIds) {
-        if (clientIds == null || clientIds.isEmpty()) {
-            return Collections.emptyMap();
+        if (CollUtil.isEmpty(clientIds)) {
+            return Map.of();
         }
-        return clientMapper.selectBatchIds(clientIds).stream()
-                .filter(c -> Objects.nonNull(c.getServerId()))
-                .collect(Collectors.toMap(XrayClientDO::getId, XrayClientDO::getServerId, (a, b) -> a));
+        return CollectionUtils.convertMap(
+                xrayClientMapper.selectBatchIds(clientIds), XrayClientDO::getId, XrayClientDO::getServerId);
     }
 
     @Override
     public Map<String, String> getLandingIdByClientIds(Collection<String> clientIds) {
-        if (clientIds == null || clientIds.isEmpty()) {
-            return Collections.emptyMap();
+        if (CollUtil.isEmpty(clientIds)) {
+            return Map.of();
         }
-        return clientMapper.selectBatchIds(clientIds).stream()
-                .filter(c -> Objects.nonNull(c.getIpId()))
-                .collect(Collectors.toMap(XrayClientDO::getId, XrayClientDO::getIpId, (a, b) -> a));
+        // ip_id 为 NOT NULL, 直接转 clientId → ip_id
+        return CollectionUtils.convertMap(
+                xrayClientMapper.selectBatchIds(clientIds), XrayClientDO::getId, XrayClientDO::getIpId);
     }
 
     @Override
@@ -105,17 +105,16 @@ public class XrayClientNodeApiImpl implements XrayClientNodeApi {
         if (StrUtil.isBlank(landingServerId)) {
             return null;
         }
-        XrayClientDO c = clientMapper.selectByIpId(landingServerId);
-        return c == null ? null : c.getId();
+        XrayClientDO c = xrayClientMapper.selectByIpId(landingServerId);
+        return ObjectUtil.isNull(c) ? null : c.getId();
     }
 
     @Override
     public Map<String, String> getClientServerMapByServerIds(Collection<String> serverIds) {
-        if (serverIds == null || serverIds.isEmpty()) {
-            return Collections.emptyMap();
+        if (CollUtil.isEmpty(serverIds)) {
+            return Map.of();
         }
-        return clientMapper.selectByServerIds(serverIds).stream()
-                .filter(c -> Objects.nonNull(c.getServerId()))
-                .collect(Collectors.toMap(XrayClientDO::getId, XrayClientDO::getServerId, (a, b) -> a));
+        return CollectionUtils.convertMap(
+                xrayClientMapper.selectByServerIds(serverIds), XrayClientDO::getId, XrayClientDO::getServerId);
     }
 }
